Homepage spacing issue fixed

--- a/resources/sass/pages/_homepage.scss
+++ b/resources/sass/pages/_homepage.scss
@@ -167,12 +167,12 @@ $page-section-bg: #F1F3FA;
 .category-grid-section {
     .btn-outline-primary {
         width: 235px;
-        margin-top: 18px;
+        margin-top: 23px;
     }
 }
 
 .category-box {
-    margin: 0 auto 2rem;
+    margin: 0 auto 35px;
     max-width: 313px;
 
     .category-image {
